--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,9 @@ services:
 
   web:
     container_name: web
-    build: ./web
+    build:
+      context: ./web
+      target: base
     ports:
       - 3000:3000
     volumes:
