--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           node-version: 16.16.0
       - run: |
-          npm run install --prefix web
+          npm install --prefix web
           npm run build --prefix web
